# EX1_Corona_Virus_Simulation

./: Alpha.cpp  Alpha.h  CMakeLists.txt  Delta.cpp  Delta.h  ExecuteProgram.cpp  ExecuteProgram.h  Omicron.cpp  Omicron.h  SARS_CoV_2.cpp  SARS_CoV_2.h  main.cpp
